plugins {
    id 'java'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'nebula.lint' version '20.6.2'
}

group 'no.unit.alma'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21  // source-code version and must be <= targetCompatibility
    targetCompatibility = JavaVersion.VERSION_21 // bytecode target version
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
    gradleVersion = "8.14.3"
}

dependencies {
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.13.2'
    implementation group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '3.16.1'
    implementation group: 'software.amazon.awssdk', name: 'sqs', version: '2.33.9'
    implementation group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.4.0'
    implementation group: 'com.github.BIBSYSDEV', name: 'marc21-xml-parser', version: '2.11.5'
    implementation group: 'com.github.bibsysdev', name: 'core', version: '2.3.15'
    implementation group: 'software.amazon.awssdk', name: 'aws-core', version: '2.33.9'
    implementation group: 'software.amazon.awssdk', name: 'regions', version: '2.33.9'
    
    testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.20.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.19.0'
    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '3.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '6.0.2'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter', version: '6.0.2'
    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: '6.0.2'

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
    runtimeOnly group: 'com.amazonaws', name: 'aws-lambda-java-log4j2', version: '1.6.0'
    runtimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.25.1'
    runtimeOnly group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.25.1'
    runtimeOnly group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.25.1'
}

gradleLint {
    rules = ['all-dependency']
    reportFormat = 'html'
    reportOnlyFixableViolations = true
}

tasks.named('test', Test) {
    useJUnitPlatform()
    failFast = true
    finalizedBy jacocoTestReport
    testLogging {
        events 'skipped', 'failed'
    }
}

pmd {
    toolVersion = '7.16.0'
    ruleSetConfig = rootProject.resources.text.fromFile('config/pmd/ruleset.xml')
    ruleSets = []
    ignoreFailures = false
}

checkstyle {
    toolVersion = '10.26.0'
    configFile = rootProject.resources.text.fromFile('config/checkstyle/checkstyle.xml').asFile()
    showViolations = true
}

tasks.withType(Checkstyle).configureEach {
    reports {
        html.required
        html.stylesheet = rootProject.resources.text.fromFile('config/checkstyle/checkstyle-simple.xsl')
    }
}

jacocoTestReport {
    reports {
        html.outputLocation.set(layout.buildDirectory.dir("reports/jacoco"))
    }
}

tasks.named('check').configure {
    dependsOn tasks.named('jacocoTestCoverageVerification')
}

tasks.named('jacocoTestCoverageVerification').configure {
    dependsOn tasks.named('jacocoTestReport')

    violationRules {
        rule {
            limit {
                counter = 'METHOD'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
        }

        rule {
            limit {
                counter = 'CLASS'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
        }
    }
}
